--- a/repro-build/Dockerfile.repro
+++ b/repro-build/Dockerfile.repro
@@ -23,10 +23,9 @@ RUN apt update && apt install -y \
     git \
     file \
     gawk \
-    wget
-# Generate locale
+    wget \
+    libclang-dev \
+    xorriso
+
+# Generate locale for bitbake
 RUN locale-gen en_US.UTF-8
-
-RUN apt install -y libclang-dev
-
-RUN apt install -y xorriso
