Add images with nvidia GPU-TEE support

--- a/meta-dstack/conf/distro/dstack.conf
+++ b/meta-dstack/conf/distro/dstack.conf
@@ -14,6 +14,8 @@ PREFERRED_PROVIDER_virtual/kernel = "linux-yocto-dev"
 PREFERRED_VERSION_linux-yocto-dev ?= "6.9%"
 LINUX_KERNEL_TYPE = "tiny"
 
+MACHINE_FEATURES += "numa"
+
 VIRTUAL-RUNTIME_init_manager = "systemd"
 VIRTUAL-RUNTIME_initscripts = ""
 VIRTUAL-RUNTIME_dev_manager = "systemd"
