feat: Add dstack-prepare service drop-in configuration
- Install drop-in configurations for docker.service and containerd.service
- Remove systemd-extra-utils from BAD_RECOMMENDATIONS to allow its installation

--- a/meta-dstack/conf/distro/dstack.conf
+++ b/meta-dstack/conf/distro/dstack.conf
@@ -24,4 +24,4 @@ SERIAL_CONSOLES = "115200;ttyS0"
 PREFERRED_VERSION_rust-bin-cross-x86_64 = "1.92.0"
 PREFERRED_VERSION_cargo-bin-cross-x86_64 = "1.92.0"
 
-BAD_RECOMMENDATIONS = "busybox-syslog systemd-extra-utils"
+BAD_RECOMMENDATIONS = "busybox-syslog"
