Faster kernel download url

--- a/bb-build/conf/local.conf
+++ b/bb-build/conf/local.conf
@@ -286,3 +286,10 @@ BB_DISKMON_DIRS ??= "\
 # track the version of this file when it was generated. This can safely be ignored if
 # this doesn't mean anything to you.
 CONF_VERSION = "2"
+
+# Prefer kernel.org yocto source mirror to avoid slow downloads.yoctoproject.org paths
+INHERIT += "own-mirrors"
+SOURCE_MIRROR_URL = "https://mirrors.kernel.org/yocto-sources/"
+
+# Improve resilience for large files on unstable links
+FETCHCMD_wget = "wget --progress=dot --inet4-only -c"
